# SharkPy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Reqs  SECURITY.md  SharkPy.spec  build.bat  install.ps1  install.sh  main.py  protocol_parser.py  pyproject.toml  requirements-windows.txt  requirements.txt  setup.py
Sharkpy/: attack_engine.py  auxiliar.py  ca_manager.py  core.py  main.py  p_firewall.py  p_firewall_win.py  protocol_parser.py  tcp_proxy.py  tls_proxy.py
Sharkpy/gui/: gui.py  packetshark.ui  qt_ui.py
docs/: ARCHITECTURE.md  TLS_INTERCEPTION.md  WINDOWS.md
gui/: gui.py  packetshark.ui  qt_ui.py  qt_ui.py.backup
tests/: test_protocol_parser.py  test_tls_proxy.py
